--- a/style.css
+++ b/style.css
@@ -15,20 +15,10 @@ body {
 	background-color:  black;
 }
 
-.flex-grid {
-  display: flex;
-  /*justify-content: space-between;*/
-  margin:  0px 100px;
-}
-
 .container {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 	justify-content:  center;
-	flex-wrap:  wrap;
-}
-
-.container>* {
-	flex:  0 0 33.3333%;
 }
 
 input:not(:checked) + label {
@@ -36,7 +26,6 @@ input:not(:checked) + label {
 	transform:  scale(1);
 	transition: 500ms ease;
 	margin:  none;
-	animation: shake;
 }
 
 input:checked + label {
